# api.yaml
@@ -17,7 +17,7 @@ paths:
                   $ref: '#components/schemas/Report'
 
         '401':
-          description: Missing JWT token
+          description: Missing or invalid JWT token
           content:
             application/json:
               schema:
@@ -64,7 +64,7 @@ paths:
                 $ref: '#/components/schemas/Report'
 
         '401':
-          description: Missing JWT token
+          description: Missing or invalid JWT token
           content:
             application/json:
               schema:
@@ -95,7 +95,7 @@ paths:
                 format: binary
 
         '401':
-          description: Missing JWT token
+          description: Missing or invalid JWT token
           content:
             application/json:
               schema:
@@ -122,7 +122,7 @@ paths:
                   $ref: '#/components/schemas/Patient'
 
         '401':
-          description: Missing JWT token
+          description: Missing or invalid JWT token
           content:
             application/json:
               schema:
@@ -151,7 +151,7 @@ paths:
               $ref: '#/components/schemas/Patient'
 
         '401':
-          description: Missing JWT token
+          description: Missing or invalid JWT token
           content:
             application/json:
               schema:
@@ -182,7 +182,7 @@ paths:
                 $ref: '#/components/schemas/Report'
 
         '401':
-          description: Missing JWT token
+          description: Missing or invalid JWT token
           content:
             application/json:
               schema:
@@ -214,7 +214,7 @@ paths:
                 $ref: '#/components/schemas/Employee'
 
         '401':
-          description: Missing JWT token
+          description: Missing or invalid JWT token
           content:
             application/json:
               schema:
@@ -243,7 +243,7 @@ paths:
                 $ref: '#/components/schemas/Employee'
 
         '401':
-          description: Missing JWT token
+          description: Missing or invalid JWT token
           content:
             application/json:
               schema:
@@ -251,6 +251,43 @@ paths:
                 properties:
                   message:
                     type: string
+
+    patch:
+      summary: Change employees persmissions
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                roleId:
+                  type: integer
+      responses:
+        '200':
+          desctiption: Employee permissions modified successfully
+          content:
+            application/json:
+                $ref: '#/components/schemas/Employee'
+
+        '401':
+          description: Missing or invalid JWT token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+
 
 ##############################################
 
